style.css
body {
  font-family: "Roboto", "sans-serif";
}

h1 {
  font-weight: 100;
  text-align: center;
  color: #ffffff;
}

.parent {
  width: 500px;
  height: 1087px;
  margin: auto;
  background-color: transparent;
  box-shadow: 5px 10px 8px #585858;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

.top-view {
  width: 500px;
  height: 433px;
  background-color: #6c7077;
  border: none;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.bottom-view {
  width: 500px;
  height: 654px;
  background-color: #0c1c23;
  border: none;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  overflow: auto;
}

.input-field {
  width: 400px;
  height: 47px;
  margin: 59px auto auto auto;
}

#total-weight,
#barbell-weight {
  width: 160px;
  height: 47px;
  font-size: 18px;
  padding-left: 17px;
  float: left;
  border-radius: 15px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  -ms-border-radius: 15px;
  -o-border-radius: 15px;
  border: none;
  color: #494949;
  font-weight: 300;
}

input:focus {
  outline: none;
}

#barbell-weight {
  margin-left: 23px;
}

::placeholder {
  color: #9e9ea2;
}

.plates-avail {
  margin-top: 50px;
  margin-bottom: 30px;
}

.instructions {
  color: #ffffff;
}

.plate-btn {
  background-color: #ffffff;
  font-size: 42px;
  font-weight: 100;
  color: #a0c89f;
  width: 82px;
  height: 78px;
  text-align: center;
  cursor: pointer;
  outline: none;
  margin: 10px;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  /* border: 3px solid #a0c89f; */
}

.plate-btn-selected {
  background-color: #a0c89f;
  color: #ffffff;
  font-size: 42px;
  font-weight: 100;
  width: 82px;
  height: 78px;
  text-align: center;
  cursor: pointer;
  outline: none;
  margin: 10px;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
}

.calc-btn {
  grid-column-start: 2;
  grid-column-end: 4;
  height: 65px;
  width: 185px;
  margin-top: 18px;
  margin-left: 24px;
  border-radius: 33px;
  text-align: center;
  font-size: 20px;
  font-weight: 100;
  background-color: #6c7077;
  color: #ffffff;
  cursor: pointer;
  border: none;
  outline: none;
  -webkit-border-radius: 33px;
  -moz-border-radius: 33px;
  -ms-border-radius: 33px;
  -o-border-radius: 33px;
}

.calc-btn:hover {
  background-color: #a0c89f;
  color: #0c1c23;
  transition: all 0.4s ease;
  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -ms-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
}

.parent-plate {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-template-rows: auto auto auto;
  /* margin: 39px 59px; */
  justify-content: space-evenly;
}

.column {
  display: table-cell;
}

i {
  font-size: 45px;
  font-weight: 100;
}

.output {
  width: 500px;
  height: 433px;
}

.barbell {
  width: 400px;
  height: 15px;
  fill: hsl(116, 0%, 73%);
  transform: translateX(99px) translateY(233px);
  -webkit-transform: translateX(99px) translateY(233px);
  -moz-transform: translateX(99px) translateY(233px);
  -ms-transform: translateX(99px) translateY(233px);
  -o-transform: translateX(99px) translateY(233px);
}

.plate-foFive {
  width: 22px;
  height: 193px;
  fill: black;
  stroke-width: 1px;
  stroke: #9e9ea2;
  transform: translateX(186px) translateY(146px);
  -webkit-transform: translateX(186px) translateY(146px);
  -moz-transform: translateX(186px) translateY(146px);
  -ms-transform: translateX(186px) translateY(146px);
  -o-transform: translateX(186px) translateY(146px);
}

.label-foFive {
  width: 15px;
  height: 14px;
  fill: white;
  transform: translateX(188px) translateY(246px);
  -webkit-transform: translateX(188px) translateY(246px);
  -moz-transform: translateX(188px) translateY(246px);
  -ms-transform: translateX(188px) translateY(246px);
  -o-transform: translateX(188px) translateY(246px);
}

.plate-threeFive {
  width: 22px;
  height: 184px;
  fill: black;
  stroke-width: 1px;
  stroke: #9e9ea2;
  transform: translateX(163.8px) translateY(150.4px);
  -webkit-transform: translateX(163.8px) translateY(150.4px);
  -moz-transform: translateX(163.8px) translateY(150.4px);
  -ms-transform: translateX(163.8px) translateY(150.4px);
  -o-transform: translateX(163.8px) translateY(150.4px);
}

.label-threeFive {
  width: 10.8pt;
  height: 10pt;
  fill: white;
  transform: translateX(166.13px) translateY(245.06px);
  -webkit-transform: translateX(166.13px) translateY(245.06px);
  -moz-transform: translateX(166.13px) translateY(245.06px);
  -ms-transform: translateX(166.13px) translateY(245.06px);
  -o-transform: translateX(166.13px) translateY(245.06px);
}

